--- a/DemoWE/appsettings.json
+++ b/DemoWE/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DemoWEContext": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\ADMIN\\Documents\\DemoWE.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=True"
+    "DemoWEContext": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\Admin\\Documents\\DemoDB.mdf;Integrated Security=True;Connect Timeout=30"
   }
 }
