Creating a Request and project Page

--- a/DemoWE/appsettings.json
+++ b/DemoWE/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DemoWEContext": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\Seraphic\\Documents\\TestingWE.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=True"
+    "DemoWEContext": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\SAFai\\OneDrive\\المستندات\\WEDB.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=True"
   }
 }
