Updated Project (23 Mar)

--- a/DemoWE/appsettings.json
+++ b/DemoWE/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DemoWEContext": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\SAFai\\OneDrive\\المستندات\\WEDB.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=True"
+    "DemoWEContext": "Data Source=SQL9001.site4now.net;Initial Catalog=db_aa6a48_we;User Id=db_aa6a48_we_admin;Password=WorkEvo2024"
   }
 }
