--- a/DemoWE/appsettings.json
+++ b/DemoWE/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DemoWEContext": "Data Source=SQL9001.site4now.net;Initial Catalog=db_aa6a48_we;User Id=db_aa6a48_we_admin;Password=WorkEvo2024"
+    "DemoWEContext": "Data Source=SQL6031.site4now.net;Initial Catalog=db_aa7de3_t10;User Id=db_aa7de3_t10_admin;Password=A$d12345"
   }
 }
